tests/ui/feature-gates/feature-gate-cfg_overflow_checks.stderr
error[E0658]: `cfg(overflow_checks)` is experimental and subject to change
  --> $DIR/feature-gate-cfg_overflow_checks.rs:3:7
   |
LL | #[cfg(overflow_checks)]
   |       ^^^^^^^^^^^^^^^
   |
   = note: see issue #111466 <https://github.com/rust-lang/rust/issues/111466> for more information
   = help: add `#![feature(cfg_overflow_checks)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
